--- a/public/views/home.hbs
+++ b/public/views/home.hbs
@@ -1,2 +1,5 @@
-
-
+<div class="flex items-center justify-center h-16 mb-2">
+    <div class="w-2/3 flex items-center justify-around">
+        
+    </div>
+</div>
