--- a/public/views/layouts/default.hbs
+++ b/public/views/layouts/default.hbs
@@ -13,11 +13,7 @@
       class="
         container-main 
         text-white 
-        bg-gradient-to-l 
-        from-red-950
-        to-black
-        via-transparent
-        backdrop-sepia
+        bg-zinc-900
       ">
     	{{> header }}
       	<main class="select-none ">
