--- a/public/views/partials/components/drop-down.hbs
+++ b/public/views/partials/components/drop-down.hbs
@@ -10,7 +10,7 @@
     data-drop-down-allow-close="true"
   >
   <div class="flex w-full justify-between" data-drop-down-allow-close="true">
-    <h2 data-drop-down-allow-close="true" class="text-xl text-center w-full self-center m-1">{{ title }}</h2>
+    <h2 data-drop-down-allow-close="true" class="text-xl w-full self-center m-1">{{ title }}</h2>
     <img src="/images/icons/drop-down.svg" class="rotate-icon hover:scale-150 drop-down-icon ease-in app-duration" data-drop-down-allow-close="true">
   </div>
   <div class="overflow-hidden flex flex-col ease-in app-duration delay-100 ease-out h-0 -translate-y opacity-0" data-drop-down="true" data-drop-down-allow-close="true">
