--- a/public/views/partials/components/form/input.hbs
+++ b/public/views/partials/components/form/input.hbs
@@ -16,7 +16,9 @@
     {{/if}}
     class="
         focus:outline-none
-        rounded
-        text-black
+        rounded-[2rem]
+        text-white
+        bg-red-950
+        p-2
         {{ classes }}
     ">
