--- a/public/views/partials/components/form/text-area.hbs
+++ b/public/views/partials/components/form/text-area.hbs
@@ -18,7 +18,8 @@
     class="
         focus:outline-none
         rounded
-        text-black
+        text-white
+        bg-red-950
         caret-gray-400
         {{ classes }}
     ">
