--- a/public/views/partials/components/menu/nav-bar.hbs
+++ b/public/views/partials/components/menu/nav-bar.hbs
@@ -16,7 +16,7 @@
         app-border
         app-red-bg 
         text-white 
-        rounded-full 
+        app-rounded 
         flex-col 
         app-duration
         hover:shadow-red-950
@@ -36,24 +36,24 @@
             relative 
             z-30 
             app-red-bg
-            rounded 
+            app-rounded 
             border-red-900 
             hover:shadow-black 
             hover:shadow-2xl 
             mt-2 
-            p-2
+            p-3
             text-white
         " 
         id="list-menu"
     >
-        {{> components/menu/li classes="app-duration app-delay -translate-x opacity-0 my-3" linkClasses="hover:text-red-800" title='Home' link='/home' icon='home' }}
-        {{> components/menu/li classes="app-duration app-delay -translate-x opacity-0 my-3" linkClasses="hover:text-red-800" title='Schedule' icon='schedule' }}
-        {{> components/menu/li classes="app-duration app-delay -translate-x opacity-0 my-3" linkClasses="hover:text-red-800" title='Workouts' link="/workouts" icon='dumbell' }}
-        {{> components/menu/li classes="app-duration app-delay -translate-x opacity-0 my-3" linkClasses="hover:text-red-800" title='Muscles' link='/muscles' icon='skeleton' }}
-        {{> components/menu/li classes="app-duration app-delay -translate-x opacity-0 my-3" linkClasses="hover:text-red-800" title='Exercises' link='/exercise' icon='yoga' }}
-        {{> components/menu/li classes="app-duration app-delay -translate-x opacity-0 my-3" linkClasses="hover:text-red-800" title='Personal' icon='personal' }}
-        {{> components/menu/li classes="app-duration app-delay -translate-x opacity-0 my-3" linkClasses="hover:text-red-800" title='Costumers' icon='peaple-group' }}
-        {{> components/menu/li classes="app-duration app-delay -translate-x opacity-0 my-3" linkClasses="hover:text-red-800" title='Measures' icon='balança' }}
-        {{> components/menu/li classes="app-duration app-delay -translate-x opacity-0 my-3" linkClasses="hover:text-red-800" title='Settings' icon='settings' }}
+        {{> components/menu/li classes="app-duration app-delay -translate-x opacity-0 my-3" linkClasses="hover:text-red-950" title='Home' link='/home' icon='home' }}
+        {{> components/menu/li classes="app-duration app-delay -translate-x opacity-0 my-3" linkClasses="hover:text-red-950" title='Schedule' icon='schedule' }}
+        {{> components/menu/li classes="app-duration app-delay -translate-x opacity-0 my-3" linkClasses="hover:text-red-950" title='Workouts' link="/workouts" icon='dumbell' }}
+        {{> components/menu/li classes="app-duration app-delay -translate-x opacity-0 my-3" linkClasses="hover:text-red-950" title='Muscles' link='/muscles' icon='skeleton' }}
+        {{> components/menu/li classes="app-duration app-delay -translate-x opacity-0 my-3" linkClasses="hover:text-red-950" title='Exercises' link='/exercise' icon='yoga' }}
+        {{> components/menu/li classes="app-duration app-delay -translate-x opacity-0 my-3" linkClasses="hover:text-red-950" title='Personal' icon='personal' }}
+        {{> components/menu/li classes="app-duration app-delay -translate-x opacity-0 my-3" linkClasses="hover:text-red-950" title='Costumers' icon='peaple-group' }}
+        {{> components/menu/li classes="app-duration app-delay -translate-x opacity-0 my-3" linkClasses="hover:text-red-950" title='Measures' icon='balança' }}
+        {{> components/menu/li classes="app-duration app-delay -translate-x opacity-0 my-3" linkClasses="hover:text-red-950" title='Settings' icon='settings' }}
     </ul>
 </nav>
