--- a/public/views/partials/register-form.hbs
+++ b/public/views/partials/register-form.hbs
@@ -2,7 +2,7 @@
     <form action="" id="register-form" method="post" class="
         flex-col 
         w-2/5
-        rounded
+        app-rounded
         app-red-bg
         hover:shadow-2xl
         hover:shadow-black
