--- a/public/views/partials/components/button-link.hbs
+++ b/public/views/partials/components/button-link.hbs
@@ -4,11 +4,11 @@
         text-white 
         min-w-fit 
         w-24 
-        rounded 
+        app-rounded 
         min-h-fit
         h-8
         app-duration
-        active:scale-110
+        active:scale-105
     ">
         {{ title }}
     </button>
