--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -1113,6 +1113,10 @@ video {
   transition-duration: 75ms;
 }
 
+.duration-300 {
+  transition-duration: 300ms;
+}
+
 .ease-in {
   transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
 }
