--- a/public/views/layouts/logged-default.hbs
+++ b/public/views/layouts/logged-default.hbs
@@ -7,7 +7,6 @@
   <link rel="stylesheet" rel="stylesheet" href="/styles/animations.css">
   <link rel="stylesheet" rel="stylesheet" href="/styles/styles.css">
   <link rel="stylesheet" rel="stylesheet" href="/styles/app.css">
-  <link rel="icon" type="image/png" href="/images/icons/delete.svg">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;1,100;1,200;1,300;1,400&display=swap" rel="stylesheet">
   <body class="bg-fixed">
     {{> components/menu/nav-bar }}
@@ -17,7 +16,7 @@
       class="
         container-main 
         text-white 
-        bg-zinc-900
+        app-black-bg
         backdrop-sepia
       ">
     	{{> header }}
