--- a/public/views/partials/components/form/input.hbs
+++ b/public/views/partials/components/form/input.hbs
@@ -16,9 +16,12 @@
     {{/if}}
     class="
         focus:outline-none
-        rounded-[2rem]
+        rounded-lg
         text-white
-        bg-red-950
+        app-input-bg
+        border
+        border-zinc-700
         p-2
+        autofill:bg-zinc-900
         {{ classes }}
     ">
