--- a/public/views/partials/components/form/text-area.hbs
+++ b/public/views/partials/components/form/text-area.hbs
@@ -17,9 +17,11 @@
     {{/if}}
     class="
         focus:outline-none
-        rounded
+        rounded-lg
+        border
         text-white
-        bg-red-950
+        app-input-bg
+        border-zinc-700
         caret-gray-400
         {{ classes }}
     ">
