--- a/public/views/partials/components/menu/main-links.hbs
+++ b/public/views/partials/components/menu/main-links.hbs
@@ -9,7 +9,7 @@
         <a href="">
           {{> components/atalho icon="yoga-big"}}
         </a>
-        <a href="">
+        <a href="/muscles">
           {{> components/atalho icon="skeleton-big"}}
         </a>
         <a href="">
