--- a/public/views/exercises/index.hbs
+++ b/public/views/exercises/index.hbs
@@ -1,13 +1,7 @@
-<div class="flex flex-col items-center select-none p-2">
-    <div class="flex flex-col w-4/5">
-    {{#dropDown "my-exercises-container" "List" "p-1 mb-1 app-red-bg app-border" true}}
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusantium mollitia reiciendis, atque ad temporibus tempore perferendis. Ratione blanditiis debitis quasi molestias et dolorem? Facere aspernatur similique architecto quisquam alias consequatur!
-    {{/dropDown}}
-
-    {{#dropDown "create-exercises-container" "New" "p-1 mb-1 app-red-bg app-border" true}}
-        {{> components/exercises/create muscles=muscles}}
-    {{/dropDown}}
+<div class="flex items-cente justify-center select-none p-2">
+    <div class="w-2/3 h-full flex flex-col">
+        {{> components/card/small link="/exercise/create" class="novo-exercicio-bc" title="Create Exercise"}}
+        {{> components/card/small class="exercicios-default-bc" title="Default Exercises"}}
+        {{> components/card/small class="meus-exercicios-bc" title="My Exercises"}}
     </div>
 </div>
-<script src="/js/drop-down.js" type='module'></script>
-
