--- a/public/views/partials/components/options/option.hbs
+++ b/public/views/partials/components/options/option.hbs
@@ -12,7 +12,7 @@
     >
         {{> components/icon icon="arrow-r" }}
     </div>
-    <div class="flex items-center justify-center">
+    <div class="flex items-center justify-center cursor-pointer">
         {{ title }}
     </div>
 </div>
