--- a/public/views/partials/components/slider/item.hbs
+++ b/public/views/partials/components/slider/item.hbs
@@ -9,6 +9,7 @@
     hidden
     {{/unless}} 
 " 
+    data-slider-name="{{ name }}"
     data-slider-item="true" 
     data-slider-item-active="{{#if active}}true{{/if}}" 
     data-slider-index="{{ index }}">
