--- a/public/views/partials/components/options/container.hbs
+++ b/public/views/partials/components/options/container.hbs
@@ -1,4 +1,4 @@
 <div class="{{ classes }}" data-container-name="{{ name }}">
-    <h1 class="text-center w-full">{{ title }}</h1>
+    <h1 class="text-center w-full mb-3 text-3xl">{{ title }}</h1>
     {{ content }}
 </div>
